# nfcorpus-finetuning

./: .gitignore  README.md  config.yml  databricks.yml  main.py  main_databricks.py  pyproject.toml
src/: batch_sampler.py  sentence_transformers_args.py  train.py
src/misc/: config.py
